    BSDs) so we need to add the heinous-gnu-extensions flag.
  
  * Add patch for Mac OSX to #define _VA_LIST_T. Macs were hitting trouble
    with incompatible preprocessor definitions. If the macros and internal
    definitions had all been expanded, the definitions for variadic function
    lists would have been the same, but tcc doesn't know that.

0.10  Thu, June 2, 2016

  [BUG FIXES]
  
  * Fix 64-bit cpu specification for call to configure on Macs.

0.09  Mon, May 30, 2016

  [DEPENDENCIES]
  
  * Recently, extended symbol table work was brought back up-to-date with
    the latest mob branch of tcc. The github branch with this work is
    called 'mobx'. This Alien package now uses mobx as its subrepo.

0.08  Sun, Apr 24, 2016

  [ENHANCEMENTS]
  
  * Include new exsymtab inline test files.
  
  [BUG FIXES]
  
  * Use "cc" instead of "gcc" on BSDs
  
  * MANIFEST now includes all necessary mingw header files in the git
    repo. Somehow I forgot to include these after I figured out which
    ones needed to be added.

0.07  Wed, Dec 2, 2015

  * Updated to latest work including inline support for inline functions.
  
  [ENHANCEMENTS]
  
  * New and improved patching for Mac and NetBSD
  
  * Added tentative support for Solaris
  
  * Remove stack protection on Linuxes; this was causing trouble on
    recent vintages of Ubuntu.

0.06  Sat, Aug 1, 2015

  * Forked from v0.05 of Alien::TinyCC; the source repository is now my local
    fork so that I can distribute the extended symbol table API.
  
  [ENHANCEMENTS]
  
  * Include functions to generate ExtUtils::MakeMaker arguments, ported from
    Alien::TinyCC.

0.05  Mon, Sep 2, 2013

  [BUG FIXES]
  
  * The patch function in the build system now sets execution bit on all new
    files. This fixes the build issues for BSD boxes, which patch configure,
    rendering it non-executable.
  
  [OTHER]
  
  * Added Travis CI integration.

0.04  Thu, Aug 29, 2013

  [ENHANCEMENTS]
  